--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+// creates tables
+spring.jpa.hibernate.ddl.auto = update
 
+// data source 
+spring.datasource.url = jdbc:mysql://localhost:3306/quest-app
+spring.datasource.username = root
+spring.datasource.password = 123456
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
